# mio_httpc

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
examples/: get.rs  get_streaming.rs  sync.rs  url.rs  ws.rs
src/: auth.pest  call.rs  con.rs  con_table.rs  connection.rs  dns.rs  dns_cache.rs  httpc.rs  lib.rs  types.rs
src/api/: builder.rs  default.rs  mod.rs  native.rs  openssl.rs  rustls.rs  simple_call.rs  sync.rs  websocket.rs
src/dns_parser/: builder.rs  enums.rs  error.rs  header.rs  mod.rs  name.rs  parser.rs  rrdata.rs  structs.rs
src/pub_api/: mod.rs
src/resolve/: apple.rs  cache.rs  mod.rs
src/tls_api/: apple.rs  dummy.rs  mod.rs  native.rs  openssl.rs  rustls.rs  tls_api.rs
