[package]
name = "mio_httpc"
version = "0.8.9"
authors = ["sergej jurecko <sergej.jurecko@gmail.com>"]
description = "mio_httpc is a fully async and sync http client running on top of mio only. "
repository = "https://github.com/SergejJurecko/mio_httpc"
readme = "README.md"
keywords = ["mio", "http", "client", "async", "websocket"]
categories = ["web-programming::http-client"]
license = "MIT/Apache-2.0"
documentation = "http://docs.rs/mio_httpc"
homepage = "https://github.com/SergejJurecko/mio_httpc"
build = "build.rs"
edition = "2018"

[features]
# Default does not work for https.
default = []
native = ["native-tls","crypto-hash"]
rtls = ["webpki-roots", "webpki", "ring","rustls"]


[dependencies]
mio = "0.6"
httparse = "1"
byteorder = "1"
fxhash = "0.2"
rand = "0.7"
itoa = "0.4"
data-encoding = "2.1"
failure = "0.1"
smallvec = "0.6"
pest = "2"
pest_derive = "2"
libflate = "0.1"
slab = "0.4"
percent-encoding = "2"
url = "2"
md5 = "0.6"
crypto-hash = {version = "0.3.3", optional = true}
ring = {version = "^0.16.5", optional = true}
webpki = {version = "0.21", optional = true}
webpki-roots = {version = "0.17", optional = true}
rustls = { version = "0.16.0", features = ["dangerous_configuration"], optional = true}
openssl      = { version = "0.10.*", optional = true, features = ["v102", "v110"] }
# native-tls   = { version = "0.2", optional = true}
native-tls   = { version = "0.2", optional = true}


[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation = "0.6"
core-foundation-sys = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
ipconfig = "0.1"

[dev-dependencies]
matches = "0.1"
